@@ -602,14 +602,15 @@ void DataReaderImpl::remove_all_associations ()
   DBG_ENTRY_LVL("DataReaderImpl","remove_all_associations",6);
 
   OpenDDS::DCPS::WriterIdSeq writers;
+  int size;
 
   ACE_GUARD (ACE_Recursive_Thread_Mutex, guard, this->publication_handle_lock_);
-
-  int size = writers_.size();
-  writers.length(size);
   
   {
-    ACE_WRITE_GUARD (ACE_RW_Thread_Mutex, write_guard, this->writers_lock_);
+    ACE_READ_GUARD (ACE_RW_Thread_Mutex, read_guard, this->writers_lock_);
+  
+    size = writers_.size();
+    writers.length(size);
 
     WriterMapType::iterator curr_writer = writers_.begin();
     WriterMapType::iterator end_writer = writers_.end();
