@@ -1,9 +1,16 @@
+Thu Jul 16 21:03:27 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * dds/DCPS/DataReaderImpl.cpp:
+
+	  Adjusted protection in remove_all_associations; fixes failing
+	  JMS tests.
+
 Thu Jul 16 19:42:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * dds/DCPS/Service_Participant.cpp:
 
-	  scheduler_slice is now conditionally supported for ACE 5.5+
-	  platforms.
+          scheduler_slice is now conditionally supported for ACE 5.5+
+          platforms.
 
 Thu Jul 16 19:32:28 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
